--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@ under the License.
     <!-- for ITs -->
     <sitePluginVersion>3.3</sitePluginVersion>
     <projectInfoReportsPluginVersion>2.7</projectInfoReportsPluginVersion>
+    <plexus-java.version>1.0.3</plexus-java.version>
   </properties>
 
   <contributors>
@@ -243,7 +244,7 @@ under the License.
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-java</artifactId>
-      <version>1.0.3</version>
+      <version>${plexus-java.version}</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
